DOM: Fix a getElementsByTagName regression by r454059.

r454059 introduced an inconsistency of Document::convertLocalName()
and HTMLTagCollection constructor, and it caused unexpected behavior
for non-ASCII element names. These two functions should use the same
lowercase function.

BUG=697658
R=yosin@chromium.org

Review-Url: https://codereview.chromium.org/2722343002 .
Cr-Commit-Position: refs/heads/master@{#454145}

Former-commit-id: 2f5e0aa4f9ab6fe3eb226bdfcb86e305f652e6bc